<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_title" />

    <include layout="@layout/division_long" />

    <RelativeLayout
        android:id="@+id/Account_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">


        <ImageView
            android:id="@+id/iv_household"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/registhousehold"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/y26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/x30"
            android:gravity="center_vertical"
            android:src="@mipmap/list_enter" />

        <TextView
            android:id="@+id/user_houlseId"
            style="@style/phone_password_login_regist"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:layout_toRightOf="@id/iv_household"
            android:hint="高考所在地"
            android:textColor="@color/font_1"
            android:textColorHint="@color/font_3" />


    </RelativeLayout>

    <include layout="@layout/division_short" />

    <RelativeLayout
        android:id="@+id/Name_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">

        <ImageView
            android:id="@+id/iv_name"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/regist_name"
            android:visibility="gone" />

        <com.intention.sqtwin.widget.ClearEditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y88"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/iv_name"
            android:layout_toLeftOf="@+id/ll_sex"
            android:background="@null"
            android:hint="真实姓名"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x30"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textColor="@color/account_textcolor_focus"
            android:textColorHint="@color/account_textcolor_unfocus"
            android:textCursorDrawable="@drawable/shape_edittext_cursour"
            android:textSize="@dimen/x26" />

        <LinearLayout
            android:id="@+id/ll_sex"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_width="@dimen/x150"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_man"
                android:layout_width="0dp"
                android:layout_height="@dimen/y54"
                android:layout_weight="1"
                android:gravity="center"
                android:text="男"
                android:textColor="@color/font_3"
                android:textSize="@dimen/x24" />

            <TextView
                android:id="@+id/tv_woman"
                android:layout_width="0dp"
                android:layout_height="@dimen/y54"
                android:layout_marginLeft="@dimen/x10"
                android:layout_weight="1"
                android:gravity="center"
                android:text="女"
                android:textColor="@color/font_3"
                android:textSize="@dimen/x24" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/division_short" />

    <!--    <RelativeLayout
            android:id="@+id/Sex_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:background="@color/white">

            &lt;!&ndash; <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/y88"
                 android:background="@drawable/login_shape_unfocus"
                 android:hint="@string/get_auther_num"
                 android:maxLength="20"
                 android:paddingLeft="@dimen/x150"
                 android:textColor="@color/account_textcolor_focus"
                 android:textColorHint="@color/account_textcolor_unfocus"
                 android:textCursorDrawable="@null"
                 android:textSize="@dimen/x26" />&ndash;&gt;
            &lt;!&ndash;<TextView
                android:layout_width="@dimen/x70"
                android:id="@+id/sex_man"

                android:layout_height="@dimen/y54"
                android:layout_gravity="right|center_vertical"
                android:layout_marginLeft="@dimen/x30"
                android:text="男" />&ndash;&gt;
            &lt;!&ndash;
                    <TextView
                        style="@style/phone_password_login_regist"
                        android:layout_height="@dimen/y88"
                        android:layout_marginLeft="@dimen/x30"
                        android:text="性别" />&ndash;&gt;
            <ImageView
                android:id="@+id/iv_sex"
                android:layout_width="@dimen/x36"
                android:layout_height="@dimen/y40"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x30"
                android:src="@mipmap/regist_sex"
                android:visibility="gone" />

            &lt;!&ndash;     <com.flyco.tablayout.SegmentTabLayout
                     android:id="@+id/sex_select"
                     android:layout_width="@dimen/x140"
                     android:layout_height="@dimen/y54"
                     android:layout_gravity="right"
                     android:layout_marginRight="@dimen/x30"
                     android:layout_marginTop="10dp"
                     tl:tl_bar_color="#ffffff"
                     tl:tl_bar_stroke_color="@color/white"
                     tl:tl_indicator_anim_enable="true"
                     tl:tl_indicator_color="@color/app_main"
                     tl:tl_indicator_corner_radius="8dp"
                     tl:tl_tab_padding="20dp"
                     tl:tl_textSelectColor="@color/white"
                     tl:tl_textUnselectColor="@color/font_3" />&ndash;&gt;
            <LinearLayout
                android:id="@+id/Rg_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x30"
                android:layout_marginRight="@dimen/x30"
                android:layout_toRightOf="@id/iv_sex"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_man"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/y54"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="男"
                    android:textColor="@color/font_3"
                    android:textSize="@dimen/x24" />

                <TextView
                    android:id="@+id/tv_woman"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/y54"
                    android:layout_marginLeft="@dimen/x10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="女"
                    android:textColor="@color/font_3"
                    android:textSize="@dimen/x24" />


            </LinearLayout>


        </RelativeLayout>

        <include layout="@layout/division_short" />-->

    <RelativeLayout
        android:id="@+id/schoolarea_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">


        <ImageView
            android:id="@+id/iv_schoolarea"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/registhousehold"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/y26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/x30"
            android:gravity="center_vertical"
            android:src="@mipmap/list_enter" />

        <TextView
            android:id="@+id/user_schoolareaId"
            style="@style/phone_password_login_regist"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:layout_toRightOf="@id/iv_schoolarea"
            android:hint="选择学校所在地"
            android:textColor="@color/font_1"
            android:textColorHint="@color/font_3" />


    </RelativeLayout>

    <include layout="@layout/division_short" />

    <RelativeLayout
        android:id="@+id/school_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">


        <ImageView
            android:id="@+id/iv_school"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/registhousehold"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/y26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/x30"
            android:gravity="center_vertical"
            android:src="@mipmap/list_enter" />

        <TextView
            android:id="@+id/user_schoolId"
            style="@style/phone_password_login_regist"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:layout_toRightOf="@id/iv_school"
            android:hint="选择学校"
            android:textColor="@color/font_1"
            android:textColorHint="@color/font_3" />


    </RelativeLayout>

    <include layout="@layout/division_short" />

    <RelativeLayout
        android:id="@+id/rl_grade"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">


        <ImageView
            android:id="@+id/iv_grade"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/registhousehold"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/y26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/x30"
            android:gravity="center_vertical"
            android:src="@mipmap/list_enter" />

        <TextView
            android:id="@+id/user_grade"
            style="@style/phone_password_login_regist"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:layout_toRightOf="@id/iv_grade"
            android:hint="选择年级"
            android:textColor="@color/font_1"
            android:textColorHint="@color/font_3" />


    </RelativeLayout>

    <include layout="@layout/division_short" />

    <RelativeLayout
        android:id="@+id/rl_class"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">


        <!--<TextView
            style="@style/phone_password_login_regist"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:text="邀请码" />-->
        <ImageView
            android:id="@+id/iv_class"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/regist_invitecode"
            android:visibility="gone" />

        <com.intention.sqtwin.widget.ClearEditText
            android:id="@+id/user_class"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y88"
            android:layout_toRightOf="@id/iv_class"
            android:background="@null"
            android:hint="班级名称"
            android:maxLines="1"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x30"
            android:singleLine="true"
            android:textColor="@color/account_textcolor_focus"
            android:textColorHint="@color/account_textcolor_unfocus"
            android:textCursorDrawable="@drawable/shape_edittext_cursour"
            android:textSize="@dimen/x26" />
    </RelativeLayout>

    <include layout="@layout/division_short" />

    <RelativeLayout
        android:id="@+id/Invitation_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y88"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@drawable/login_shape_unfocus">


        <!--<TextView
            style="@style/phone_password_login_regist"
            android:layout_height="@dimen/y88"
            android:layout_marginLeft="@dimen/x30"
            android:text="邀请码" />-->
        <ImageView
            android:id="@+id/iv_invite"
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y40"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x30"
            android:src="@mipmap/regist_invitecode"
            android:visibility="gone" />

        <com.intention.sqtwin.widget.ClearEditText
            android:id="@+id/Invitation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y88"
            android:layout_toRightOf="@id/iv_invite"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:hint="输入激活码（选填）"
            android:maxLength="11"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x30"
            android:textColor="@color/account_textcolor_focus"
            android:textColorHint="@color/account_textcolor_unfocus"
            android:textCursorDrawable="@drawable/shape_edittext_cursour"
            android:textSize="@dimen/x26" />
    </RelativeLayout>

    <include layout="@layout/division_short" />

    <RelativeLayout
        android:id="@+id/forget_rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:layout_marginTop="@dimen/y36">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/before_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/before_agreement"
                android:textColor="@color/reset_password_color"
                android:textSize="@dimen/x24" />

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/before_agreement"
                android:text="@string/agreement_text"
                android:textColor="@color/app_main"
                android:textSize="@dimen/x24" />


        </RelativeLayout>


    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y88"
        android:layout_below="@id/forget_rel"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:layout_marginTop="@dimen/y46"
        android:background="@drawable/app_login_shape"
        android:gravity="center"
        android:text="@string/Regist"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x30" />
</LinearLayout>